Dummy_Package_for_scratch_org/main/default/objects/Artifact_Dependency__c/Artifact_Dependency__c.object-meta.xml
<CustomObject>
    <label>Package Dependency</label>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Artifact Dependencies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>