Dummy_Package_for_scratch_org/main/default/objects/Artifact_Dependency__c/fields/Dependent_Artifact__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Artifact__c</fullName>
    <inlineHelpText>The artifact record which cannot be installed or managed without the depending artifact</inlineHelpText>
    <label>Dependent Package</label>
    <referenceTo>Artifact__c</referenceTo>
    <relationshipLabel>Package Dependencies (Dependent Artifact)</relationshipLabel>
    <relationshipName>Artifact_Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>