Dummy_Package_for_scratch_org/main/default/objects/Artifact_Dependency__c/fields/Depending_Artifact__c.field-meta.xml
<CustomField>
    <fullName>Depending_Artifact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The depending package artifact which contains required dependencies for the dependent package&apos;s metadata</inlineHelpText>
    <label>Depending Package</label>
    <referenceTo>Artifact__c</referenceTo>
    <relationshipLabel>Package Dependencies (Depending Artifact)</relationshipLabel>
    <relationshipName>Artifact_Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>