Dummy_Package_for_scratch_org/main/default/objects/Artifact_Dependency__c/fields/Depending_Artifact_Version__c.field-meta.xml
<CustomField>
    <fullName>Depending_Artifact_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The minumum or exact version of depending artifact. This particular version will be used during version creation and installation operations.</inlineHelpText>
    <label>Depending Package Version</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Depending version should be selected among the depending artifact&apos;s versions.</errorMessage>
        <filterItems>
            <field>$Source.Depending_Artifact__c</field>
            <operation>equals</operation>
            <valueField>Artifact_Version__c.Artifact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Artifact_Version__c</referenceTo>
    <relationshipLabel>Package Dependencies</relationshipLabel>
    <relationshipName>Artifact_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>