Dummy_Package_for_scratch_org/main/default/objects/Artifact_Dependency__c/fields/Depends_on_the_latest_version__c.field-meta.xml
<CustomField>
    <fullName>Depends_on_the_latest_version__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the latest version of the depending artifact will be used for version creation and installation operations</inlineHelpText>
    <label>Depends on the latest version</label>
    <type>Checkbox</type>
</CustomField>